2007-01-05  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/*.cpp, include/openbabel/*.h: Compiler warning fixes from
	Jean Brefort.

	* include/openbabel/residue.h, include/openbabel/generic.h: Remove
	static declarations for OBGenericDataType and residue properties.

2007-01-05 Chris Morley <ob@gaseq.co.uk>

	* include/openbabel/fingerprint.h: Give OBFingerprint a virtual
	destructor. Noel found this was why SWIG was failing.
	
2007-01-04  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields/forcefieldghemical.cpp: Fix typo from file
	renaming. (Can't use Tripos since that's a copyright.)

	* Makefile.in: Regenerate all Makefiles to fix build problems.

2007-01-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields: New code from Tim for MM2 and Ghemical force fields.

	* include/Makefile.*: Updates for Chris's changes earlier today.

	* include/inchi/*.c: Moved actual inchi source files back to src/.

	* configure, */Makefile.in: Updates for inchi move and forcefield directory.

2007-01-03 Chris Morley <ob@gaseq.co.uk>

	* Update Windows project files. But Python SWIG interface isn't
	working on Windows.
	
	* Moved libxml and inchi header files to include.

2006-12-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* Doxyfile: Change format slightly for better API documentation.

	* src/*, include/openbabel/*: Many API documentation updates.

	* include/openbabel/base.h, src/base.cpp (OBBase::Clear): New method in base
	class to improve OBConversion::Read() syntax.

2006-12-27 Chris Morley <ob@gaseq.co.uk>

	* src/newlinebuf.cpp: Revert to as in rev 1652.

2006-12-22 Chris Morley <ob@gaseq.co.uk>

	* include/openbabel/pluginiter.h, fingerprint.h: Modify so that most
	of code to implement plugin module behaviour is in pluginiter.h,
	making it easy to give this behaviour in future to other classes.
	Compatibility for OBFingerprint maintained except for iteration
	through fingerprint types which is now in the style of obiter,